--- a/setup.cfg
+++ b/setup.cfg
@@ -16,12 +16,11 @@ exclude = .tox
 [tool:pytest]
 minversion = 3.1
 testpaths = tests
-mock_use_standalone_module = true
 addopts = --cov
 
 [coverage:run]
 source =
-    linse
+    pylotree
     tests
 
 [coverage:report]
